--- a/index.html
+++ b/index.html
@@ -143,23 +143,19 @@
             <nav class="menu">
                 <div class="list-section">
                     <ul>
-                        <li><a href="academias.php" style="margin-right: 10px;">Academias</a></li>
-                        <li><a href="itens.php">Itens</a></li>
+                        <li><a href="academias.html" style="margin-right: 10px;">Academias</a></li>
+                        <li><a href="itens.html">Itens</a></li>
                     </ul>
                 </div>
                 <div class="logo">
                     <!-- Logo -->
-                    <a href="index.php">
+                    <a href="index.html">
                         LOGO
                     </a>
                 </div>
                 <div class="list-section">
                     <ul>
-                        <li><a href="logarusu.php">Logar</a></li>
-                        <?php 
-                        if(!isset($_SESSION["useruid"])){
-                            echo '<li><a class="btn-user" style="margin-left: 10px;" href="criarusu.php">Cadastrar</a></li>';
-                        } ?>
+                        <li><a href="logarusu.html">Logar</a></li>
                     </ul>
                 </div>
             </nav>
